Fix contact section overlap

--- a/styles/scss/index/style.scss
+++ b/styles/scss/index/style.scss
@@ -557,3 +557,10 @@ main {
 		}
 	}
 }
+
+@media (max-height: 600px) {
+	.contact {
+		margin-top: 40px;
+		position: relative !important;
+	}
+}
